[package]
name = "xarm"
version = "0.1.0"
authors = ["Erik St. Martin <alakriti@gmail.com"]
edition = "2018"
license = "MIT"
description = "A library for controlling the xArm 6DOF robotic arm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3"